// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TopBanner/TopBannerLangPickerButton (intern) Defaults play-test 1`] = `
<div data-test-block="true">
  <button class=" _button_1qb8h_1 ">
    <span class="_flagWrapper_1qb8h_15">
      <svg xmlns="http://www.w3.org/2000/svg"
           aria-hidden="true"
           viewbox="0 0 1100 800"
      >
        <path d="M500 0h-50v350h650v-50H500V0zM450 450v350h50V500h600v-50H450zM350 450H0v50h300v300h50V450zM350 350V0h-50v300H0v50h350z"
              style="fill: rgb(255, 255, 255);"
        >
        </path>
        <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
              style="fill: rgb(239, 43, 45);"
        >
        </path>
        <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350H450z"
              style="fill: rgb(0, 40, 104);"
        >
        </path>
      </svg>
    </span>
    <span class="_buttonText_1qb8h_21">
      Bokmål
    </span>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerLangPickerButton (intern) WithAriaCurrent play-test 1`] = `
<div data-test-block="true">
  <button class="_buttonCurrent_1qb8h_25 _button_1qb8h_1 "
          aria-current="true"
  >
    <span class="_flagWrapper_1qb8h_15">
      <svg xmlns="http://www.w3.org/2000/svg"
           aria-hidden="true"
           viewbox="0 0 1100 800"
      >
        <path d="M500 0h-50v350h650v-50H500V0zM450 450v350h50V500h600v-50H450zM350 450H0v50h300v300h50V450zM350 350V0h-50v300H0v50h350z"
              style="fill: rgb(255, 255, 255);"
        >
        </path>
        <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
              style="fill: rgb(239, 43, 45);"
        >
        </path>
        <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350H450z"
              style="fill: rgb(0, 40, 104);"
        >
        </path>
      </svg>
    </span>
    <span class="_buttonText_1qb8h_21">
      Bokmål
    </span>
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 "
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerLangPickerButton (intern) WithAttributes play-test 1`] = `
<div data-test-block="true">
  <button id="htmlid"
          class=" _button_1qb8h_1 dummyClassname"
          lang="nb"
          data-testid="123ID"
  >
    <span class="_flagWrapper_1qb8h_15">
      <svg xmlns="http://www.w3.org/2000/svg"
           aria-hidden="true"
           viewbox="0 0 1100 800"
      >
        <path d="M500 0h-50v350h650v-50H500V0zM450 450v350h50V500h600v-50H450zM350 450H0v50h300v300h50V450zM350 350V0h-50v300H0v50h350z"
              style="fill: rgb(255, 255, 255);"
        >
        </path>
        <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
              style="fill: rgb(239, 43, 45);"
        >
        </path>
        <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350H450z"
              style="fill: rgb(0, 40, 104);"
        >
        </path>
      </svg>
    </span>
    <span class="_buttonText_1qb8h_21">
      Bokmål
    </span>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerLangPickerButton (intern) WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <button class=" _button_1qb8h_1 ">
    <span class="_flagWrapper_1qb8h_15">
      <svg xmlns="http://www.w3.org/2000/svg"
           aria-hidden="true"
           viewbox="0 0 1100 800"
      >
        <path d="M500 0h-50v350h650v-50H500V0zM450 450v350h50V500h600v-50H450zM350 450H0v50h300v300h50V450zM350 350V0h-50v300H0v50h350z"
              style="fill: rgb(255, 255, 255);"
        >
        </path>
        <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
              style="fill: rgb(239, 43, 45);"
        >
        </path>
        <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350H450z"
              style="fill: rgb(0, 40, 104);"
        >
        </path>
      </svg>
    </span>
    <span class="_buttonText_1qb8h_21">
      Blitt klikket på
    </span>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerLangPickerButton (intern) WithRef play-test 1`] = `
<div data-test-block="true">
  <button class=" _button_1qb8h_1 "
          id="dummyIdForwardedFromRef"
  >
    <span class="_flagWrapper_1qb8h_15">
      <svg xmlns="http://www.w3.org/2000/svg"
           aria-hidden="true"
           viewbox="0 0 1100 800"
      >
        <path d="M500 0h-50v350h650v-50H500V0zM450 450v350h50V500h600v-50H450zM350 450H0v50h300v300h50V450zM350 350V0h-50v300H0v50h350z"
              style="fill: rgb(255, 255, 255);"
        >
        </path>
        <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
              style="fill: rgb(239, 43, 45);"
        >
        </path>
        <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350H450z"
              style="fill: rgb(0, 40, 104);"
        >
        </path>
      </svg>
    </span>
    <span class="_buttonText_1qb8h_21">
      Bokmål
    </span>
  </button>
</div>
`;
